@@ -1,4 +1,6 @@
 # v1.0.7 - ???
+Features
+1. Added stack datatype.
 
 
 
